# VSTest

./: ,gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: sum.h
src/: sum.cpp
